--- a/arch/arm64/configs/fsimx8mn_defconfig
+++ b/arch/arm64/configs/fsimx8mn_defconfig
@@ -291,6 +291,13 @@ CONFIG_MACVTAP=m
 CONFIG_TUN=y
 CONFIG_VETH=m
 CONFIG_VIRTIO_NET=y
+
+CONFIG_NET_DSA_MICROCHIP_KSZ_COMMON=y
+CONFIG_NET_DSA_MICROCHIP_KSZ9477=y
+CONFIG_NET_DSA_MICROCHIP_KSZ9477_I2C=y
+
+CONFIG_ETHERNET=y
+CONFIG_MDIO=m
 CONFIG_AMD_XGBE=y
 CONFIG_NET_XGENE=y
 CONFIG_ATL1C=m
