--- a/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm.dts
@@ -22,7 +22,7 @@
 #define CONFIG_PICOCOREMX8MM_NAND
 
 /* On-board eMMC */
-//#define CONFIG_PICOCOREMX8MM_EMMC
+#define CONFIG_PICOCOREMX8MM_EMMC
 
 /* Network */
 #define CONFIG_PICOCOREMX8MM_ETH
@@ -46,8 +46,8 @@
 #define CONFIG_PICOCOREMX8MM_I2C_D
 
 /* PWM and backlight brightness */
-//#define CONFIG_PICOCOREMX8MM_PWM_A
-//#define CONFIG_PICOCOREMX8MM_BL_CTRL
+#define CONFIG_PICOCOREMX8MM_PWM_A
+#define CONFIG_PICOCOREMX8MM_BL_CTRL
 
 /* UART_A - UART1 */
 #define CONFIG_PICOCOREMX8MM_UART_A
@@ -137,10 +137,17 @@
 
 #include "../freescale/imx8mm.dtsi"
 #include <dt-bindings/pwm/pwm.h>
+#include <dt-bindings/rtc/nxp,pcf85263.h>
 
 / {
 	model = "F&S PicoCoreMX8MM";
 	compatible = "fus,imx8mm-picocoremx8mm", "fsl,imx8mm";
+
+	aliases {
+		/* Alias for GPMI node. Dont change it
+		 * because it used by the bootloader */
+		nand = &gpmi;
+	};
 
 	/* -------------------- BOARD INFO -------------------- */
 	bdinfo {
@@ -153,29 +160,46 @@
 		stdout-path = &uart1;
 	};
 
+	reserved-memory {
+		/* global autoconfigured region for contiguous allocations */
+		linux,cma {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0 0x14000000>;
+			alloc-ranges = <0 0x40000000 0 0x40000000>;
+			linux,cma-default;
+			/*
+			 * The propertiy "size" is overwritten by Uboot, depending
+			 * on the ram size. To prevent this, uncomment the following line
+			 */
+			//no-uboot-override;
+		};
+
+		rpmsg_reserved: rpmsg@0xb8000000 {
+			no-map;
+			reg = <0 0xb8000000 0 0x400000>;
+		};
+	};
+
+#ifdef CONFIG_PICOCOREMX8MM_BL_CTRL
 	backlight_ldb {
 		compatible = "pwm-backlight";
+		#pwm-cells = <3>;
+		pwms = <&pwm2 0 3000000 PWM_POLARITY_INVERTED>;
 		power-supply = <&reg_ldb_bl>;
-		pwms = <&pwm2 0 250000 PWM_POLARITY_INVERTED>;
-		brightness-levels = <135 143 151 159 167 175 183 191
-				     199 207 215 223 231 239 247 255>;
+		brightness-levels = <0 1 5 10 18 28 41 56
+				     73 92 113 137 163 192 222 255>;
 		default-brightness-level = <14>;
-		fb-names = "ldb0";
+		fb-names = "mxs-lcdif0";
 	};
+#endif
 
 	regulators {
 		compatible = "simple-bus";
 		#address-cells = <1>;
 		#size-cells = <0>;
 
-		reg_vref_3v3: regulator_3v3 {
-			compatible = "regulator-fixed";
-			regulator-name = "vref-3V3";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			regulator-always-on;
-		};
-
+		/* necessary for lcdif-tc35874-j070wvtc0211 */
 		reg_vref_1v2: regulator_1v2 {
 			compatible = "regulator-fixed";
 			regulator-name = "vref-1V2";
@@ -191,18 +215,7 @@
 			regulator-max-microvolt = <1800000>;
 			regulator-always-on;
 		};
-#if 0
-		reg_sd1_vmmc: sd1_vmmc_regulator {
-			compatible = "regulator-fixed";
-			regulator-name = "VMMC";
-			regulator-min-microvolt = <3300000>;
-			regulator-max-microvolt = <3300000>;
-			gpio = <&gpio1 3 GPIO_ACTIVE_HIGH>;
-			off-on-delay = <20000>;
-			startup-delay-us = <100>;
-			enable-active-high;
-		};
-#endif
+
 		reg_usdhc2_vmmc: regulator-usdhc2 {
 			compatible = "regulator-fixed";
 			regulator-name = "VSD_3V3";
@@ -211,6 +224,13 @@
 			gpio = <&gpio2 19 GPIO_ACTIVE_HIGH>;
 			off-on-delay = <20000>;
 			enable-active-high;
+		};
+		reg_vref_3v3: regulator_3v3 {
+			compatible = "regulator-fixed";
+			regulator-name = "vref-3V3";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			regulator-always-on;
 		};
 
 		reg_wlan_reset: regulator-usdhc2-wlan {
@@ -233,6 +253,7 @@
 			enable-active-high;
 		};
 
+#ifdef CONFIG_PICOCOREMX8MM_BL_CTRL
 		reg_ldb_bl: ldb-bl {
 			compatible = "regulator-fixed";
 			regulator-name = "ldb-bl";
@@ -241,29 +262,7 @@
 			regulator-max-microvolt = <3300000>;
 			enable-active-high;
 		};
-
-		/* USB_OTG1_PWR done by USB controller, no regulator needed */
-#if 0 //###
-		reg_usb_otg1_vbus: usb_otg1_vbus {
-			compatible = "regulator-fixed";
-			regulator-name = "usb_otg1_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio1 12 GPIO_ACTIVE_LOW>;
-		};
-#endif //###
-
-		/* USB_OTG2_PWR done by USB controller, no regulator needed */
-#if 0 //###
-		reg_usb_otg2_vbus: usb_otg2_vbus {
-			compatible = "regulator-fixed";
-			regulator-name = "usb_otg1_vbus";
-			regulator-min-microvolt = <5000000>;
-			regulator-max-microvolt = <5000000>;
-			gpio = <&gpio1 14 0>;
-			enable-active-high;
-		};
-#endif //###
+#endif
 
 #ifdef CONFIG_PICOCOREMX8MM_SGTL5000_AUDIO
 		/* SGTL5000 analog voltage */
@@ -333,7 +332,11 @@
 			"Headphone Jack", "HP_OUT";
 	};
 #endif
-
+	pcie0_refclk: pcie0-refclk {
+		compatible = "fixed-clock";
+		#clock-cells = <0>;
+		clock-frequency = <100000000>;
+	};
 };
 
 &clk {
@@ -384,7 +387,7 @@
 		/* MCLK is needed for i2c sgtl driver */
 		pinctrl-names = "default";
 		pinctrl-0 = <&pinctrl_sgtl5000>;
-		reg = <0x0a>;
+		reg = <0xa>;
 		mono2both;
 		clocks = <&clk IMX8MM_CLK_SAI1_ROOT>;
 		VDDA-supply = <&reg_sgtl5000_vdda>;
@@ -394,27 +397,17 @@
 #endif
 
 	/* PMIC */
-	pmic: bd71837@4b {
+	pmic@4b {
+		compatible = "rohm,bd71847";
 		reg = <0x4b>;
-		compatible = "rohm,bd71840", "rohm,bd71837";
-		/* PMIC BD71837 PMIC_nINT GPIO3_IO24 */
 		pinctrl-0 = <&pinctrl_pmic>;
-		gpio_intr = <&gpio3 24 GPIO_ACTIVE_LOW>;
-
-		gpo {
-			rohm,drv = <0x0C>;	/* 0b0000_1100 all gpos with cmos output mode */
-		};
+		interrupt-parent = <&gpio3>;
+		interrupts = <24 GPIO_ACTIVE_LOW>;
+		rohm,reset-snvs-powered;
 
 		regulators {
-			#address-cells = <1>;
-			#size-cells = <0>;
-
-			bd71837,pmic-buck2-uses-i2c-dvs;
-			bd71837,pmic-buck2-dvs-voltage = <1000000>, <900000>, <0>; /* VDD_ARM: Run-Idle */
-
-			buck1_reg: regulator@0 {
-				reg = <0>;
-				regulator-compatible = "buck1";
+			buck1_reg: BUCK1 {
+				regulator-name = "BUCK1";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1300000>;
 				regulator-boot-on;
@@ -422,114 +415,87 @@
 				regulator-ramp-delay = <1250>;
 			};
 
-			buck2_reg: regulator@1 {
-				reg = <1>;
-				regulator-compatible = "buck2";
+			buck2_reg: BUCK2 {
+				regulator-name = "BUCK2";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1300000>;
 				regulator-boot-on;
 				regulator-always-on;
 				regulator-ramp-delay = <1250>;
+				rohm,dvs-run-voltage = <1000000>;
+				rohm,dvs-idle-voltage = <900000>;
 			};
 
-			buck3_reg: regulator@2 {
-				reg = <2>;
-				regulator-compatible = "buck3";
-				regulator-min-microvolt = <700000>;
-				regulator-max-microvolt = <1300000>;
-			};
-
-			buck4_reg: regulator@3 {
-				reg = <3>;
-				regulator-compatible = "buck4";
-				regulator-min-microvolt = <700000>;
-				regulator-max-microvolt = <1300000>;
-			};
-
-			buck5_reg: regulator@4 {
-				reg = <4>;
-				regulator-compatible = "buck5";
+			buck3_reg: BUCK3 {
+				// BUCK5 in datasheet
+				regulator-name = "BUCK3";
 				regulator-min-microvolt = <700000>;
 				regulator-max-microvolt = <1350000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck6_reg: regulator@5 {
-				reg = <5>;
-				regulator-compatible = "buck6";
-				regulator-min-microvolt = <2600000>;
+			buck4_reg: BUCK4 {
+				// BUCK6 in datasheet
+				regulator-name = "BUCK4";
+				regulator-min-microvolt = <3000000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck7_reg: regulator@6 {
-				reg = <6>;
-				regulator-compatible = "buck7";
+			buck5_reg: BUCK5 {
+				// BUCK7 in datasheet
+				regulator-name = "BUCK5";
 				regulator-min-microvolt = <1605000>;
 				regulator-max-microvolt = <1995000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			buck8_reg: regulator@7 {
-				reg = <7>;
-				regulator-compatible = "buck8";
+			buck6_reg: BUCK6 {
+				// BUCK8 in datasheet
+				regulator-name = "BUCK6";
 				regulator-min-microvolt = <800000>;
 				regulator-max-microvolt = <1400000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo1_reg: regulator@8 {
-				reg = <8>;
-				regulator-compatible = "ldo1";
+			ldo1_reg: LDO1 {
+				regulator-name = "LDO1";
 				regulator-min-microvolt = <1600000>;
 				regulator-max-microvolt = <1900000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo2_reg: regulator@9 {
-				reg = <9>;
-				regulator-compatible = "ldo2";
+			ldo2_reg: LDO2 {
+				regulator-name = "LDO2";
 				regulator-min-microvolt = <800000>;
 				regulator-max-microvolt = <900000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo3_reg: regulator@10 {
-				reg = <10>;
-				regulator-compatible = "ldo3";
+			ldo3_reg: LDO3 {
+				regulator-name = "LDO3";
 				regulator-min-microvolt = <1800000>;
 				regulator-max-microvolt = <3300000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo4_reg: regulator@11 {
-				reg = <11>;
-				regulator-compatible = "ldo4";
+			ldo4_reg: LDO4 {
+				regulator-name = "LDO4";
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <1800000>;
 				regulator-boot-on;
 				regulator-always-on;
 			};
 
-			ldo5_reg: regulator@12 {
-				reg = <12>;
-				regulator-compatible = "ldo5";
-				regulator-min-microvolt = <800000>;
-				regulator-max-microvolt = <3300000>;
-				regulator-boot-on;
-				regulator-always-on;
-			};
-
-			ldo6_reg: regulator@13 {
-				reg = <13>;
-				regulator-compatible = "ldo6";
+			ldo6_reg: LDO6 {
+				regulator-name = "LDO6";
 				regulator-min-microvolt = <900000>;
 				regulator-max-microvolt = <1800000>;
 				regulator-boot-on;
@@ -538,10 +504,12 @@
 		};
 	};
 
+#ifdef CONFIG_PICOCOREMX8MM_EXT_RTC
 	rtc85063@51 {
 		compatible = "nxp,pcf85063";
 		reg = <0x51>;
 	};
+#endif
 
 #ifdef CONFIG_PICOCOREMX8MM_SERIAL_CAMERA
 	ov5640_mipi: ov5640_mipi@3c {
@@ -582,18 +550,22 @@
 	status = "okay";
 };
 
+#ifdef CONFIG_PICOCOREMX8MM_PWM_A
 &pwm1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm1>;
 	status = "okay";
 };
+#endif
 
+#ifdef CONFIG_PICOCOREMX8MM_BL_CTRL
 &pwm2 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pwm2>;
 	#pwm-cells = <3>;
 	status = "okay";
 };
+#endif
 
 #ifdef SUPPORT_M4
 &rpmsg{
@@ -718,8 +690,14 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_pcie0>;
 	reset-gpio = <&gpio3 21 GPIO_ACTIVE_LOW>;
-/*	wake-gpio = <&gpio3 22>;*/
+	wake-gpio  = <&gpio3 22 GPIO_ACTIVE_LOW>;
+	clocks = <&clk IMX8MM_CLK_PCIE1_ROOT>,
+		 <&clk IMX8MM_CLK_PCIE1_AUX>,
+		 <&clk IMX8MM_CLK_PCIE1_PHY>,
+		 <&pcie0_refclk>;
+	clock-names = "pcie", "pcie_aux", "pcie_phy", "pcie_bus";
 	ext_osc = <0>;
+	reserved-region = <&rpmsg_reserved>;
 	status = "okay";
 };
 #endif
@@ -801,7 +779,11 @@
 	pinctrl-0 = <&pinctrl_usdhc1>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-1 = <&pinctrl_usdhc1_100mhz>, <&pinctrl_usdhc1_gpio>;
 	pinctrl-2 = <&pinctrl_usdhc1_200mhz>, <&pinctrl_usdhc1_gpio>;
+#ifdef CONFIG_PICOCOREMX8MM_SD_A_8_Bit
+	bus-width = <8>;
+#else
 	bus-width = <4>;
+#endif
 #ifdef CONFIG_PICOCOREMX8MM_SD_A_CD
 	cd-gpios = <&gpio1 6 GPIO_ACTIVE_LOW>;
 #else
@@ -864,10 +846,8 @@
 	pinctrl-1 = <&pinctrl_usdhc3_100mhz>;
 	pinctrl-2 = <&pinctrl_usdhc3_200mhz>;
 	bus-width = <8>;
-	voltage-ranges = <3300 3300>;
-	no-1-8-v;
 	non-removable;
-	status = "okay";
+	status = "disabled";
 };
 #endif
 
@@ -1000,8 +980,9 @@
 			fsl,pins = <
 				/* LVDS RESET / TC358764 RST */
 				MX8MM_IOMUXC_GPIO1_IO13_GPIO1_IO13		0x16
-				/* CLKO2 -> EXTCLK */
-				MX8MM_IOMUXC_GPIO1_IO15_CCMSRCGPCMIX_CLKO2	0x59
+				/* For EXTCLK use the following setting in your display DTS */
+				/* MX8MM_IOMUXC_GPIO1_IO15_CCMSRCGPCMIX_CLKO2	0x00059 */
+				MX8MM_IOMUXC_GPIO1_IO15_GPIO1_IO15	0x00016
 			>;
 		};
 
