--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-g050tan01.dts
@@ -17,17 +17,21 @@
                 compatible = "novatek,nt35521";
 		reg = <0>;
 		pinctrl-0 = <&pinctrl_mipi_dsi_en>;
+		reset-gpio = <&gpio1 1 GPIO_ACTIVE_LOW>;
+		vci-supply = <&reg_vlcd>;
 		dsi-lanes = <4>;
-                video-mode = <0>;	/* 0: burst mode
-					 * 1: non-burst mode with sync event
-					 * 2: non-burst mode with sync pulse
-					 */
+		/* Video mode
+		 * 0: burst mode
+		 * 1: non-burst mode with sync event
+		 * 2: non-burst mode with sync pulse
+		 */
+		video-mode = <0>;
 		panel-width-mm = <62>;
 		panel-height-mm = <110>;
 
 		display-timings {
 			timing {
-                                clock-frequency = <77940000>;
+				clock-frequency = <77940000>;
 				hactive = <720>;
 				vactive = <1280>;
 				hback-porch = <72>;
