Add support for display EE0350-ET-2CP and change syntax of device-trees
- Add device-tree picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dts
- Rename picocoremx8mm-lcdif-adp-mipi2lvds1-G133HAN01.dts to
picocoremx8mm-lcdif-adp-mipi2lvds1-g133han01.dts
- Rename picocoremx8mx-lcdif-adp-mipi2lvds1-G133HAN01.dts to
picocoremx8mx-lcdif-adp-mipi2lvds1-g133han01.dts
- Rename picocoremx8mx-tc358775-G133HAN01.dts to
picocoremx8mx-tc358775-g133han01.dts

- Change file rights to "664"

--- a/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-g133han01.dts
+++ b/arch/arm64/boot/dts/F+S/picocoremx8mm-lcdif-adp-mipi2lvds1-g133han01.dts
@@ -6,7 +6,7 @@
  * published by the Free Software Foundation.
  */
 
-#include "picocoremx8mx.dts"
+#include "picocoremx8mm-bbdsi.dts"
 
 #define CONFIG_PICOCOREMX8MM_INVERTED_XY
 / {
@@ -125,6 +125,4 @@
         0x01>;
 	};
 };
-
-
 
