--- a/arch/arm64/boot/dts/F+S/Makefile
+++ b/arch/arm64/boot/dts/F+S/Makefile
@@ -16,12 +16,14 @@ dtb-$(CONFIG_ARCH_MXC) += picocoremx8mm.dtb \
 								picocoremx8mm-lcdif-g050tan01.dtb \
 								picocoremx8mm-lcdif-adp-mipi2lvds1-j070wvtc0211-single-display.dtb \
 								picocoremx8mm-lcdif-rf3500d-ayw-mng1.dtb \
+								picocoremx8mm-lcdif-adp-mipi2lvds1-g133han01.dtb \
+								picocoremx8mm-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
 								tbs2.dtb \
-								picocoremx8mx-lcdif-adp-mipi2lvds1-G133HAN01.dtb \
-								picocoremx8mm-lcdif-adp-mipi2lvds1-G133HAN01.dtb \
-								picocoremx8mx-tc358775-G133HAN01.dtb \
+								picocoremx8mx-lcdif-adp-mipi2lvds1-g133han01.dtb \
+								picocoremx8mx-tc358775-g133han01.dtb \
 								picocoremx8mx-tc358775-j070wvtc0211.dtb \
-								picocoremx8mx-lcdif-ADP-MIPI2MIPI1-EE0350ET.dtb \
+								picocoremx8mx-lcdif-adp-mipi2mipi1-ee0350et-2cp.dtb \
+								picocoremx8mx-lcdif-adp-MIPI2MIPI1-EE0350ET.dtb
 
 dtb-$(CONFIG_ARCH_MXC) += efusmx8x.dtb
 
